--- a/FormsManagerSubscriber/FormsManagerSubscriber.csproj
+++ b/FormsManagerSubscriber/FormsManagerSubscriber.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\EventBus.csproj" />
+    <ProjectReference Include="..\EventBus\EventBus.csproj" />
   </ItemGroup>
 
 </Project>
