--- a/StatisticsSubscriber/StatisticsSubscriber.csproj
+++ b/StatisticsSubscriber/StatisticsSubscriber.csproj
@@ -36,9 +36,6 @@
     <Reference Include="Microsoft.Diagnostics.Tracing.EventSource, Version=1.1.28.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\DirectRouting_Publisher\packages\Microsoft.Diagnostics.Tracing.EventSource.Redist.1.1.28\lib\net46\Microsoft.Diagnostics.Tracing.EventSource.dll</HintPath>
     </Reference>
-    <Reference Include="RabbitMQ.Client, Version=5.0.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
-      <HintPath>..\DirectRouting_Publisher\packages\RabbitMQ.Client.5.1.0\lib\net451\RabbitMQ.Client.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,7 +54,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Common\EventBus.csproj">
+    <ProjectReference Include="..\EventBus\EventBus.csproj">
       <Project>{7fe3db48-6952-4c56-9526-6b204a5d0e32}</Project>
       <Name>EventBus</Name>
     </ProjectReference>
