--- a/EventBus/EventBus.csproj
+++ b/EventBus/EventBus.csproj
@@ -65,21 +65,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="API\Connection.cs" />
-    <Compile Include="API\Broker.cs" />
-    <Compile Include="API\IMessage.cs" />
-    <Compile Include="API\IPublish.cs" />
-    <Compile Include="API\ISubscribe.cs" />
-    <Compile Include="API\MessageEventArgs.cs" />
-    <Compile Include="Configuration.cs" />
+    <Compile Include="RabbitMQ\IRabbitMQ.cs" />
+    <Compile Include="RabbitMQ\Connection.cs" />
+    <Compile Include="RabbitMQ\Broker.cs" />
+    <Compile Include="IEventBus.cs" />
+    <Compile Include="IMessage.cs" />
+    <Compile Include="IMessageEventArgs.cs" />
+    <Compile Include="IPublish.cs" />
+    <Compile Include="ISubscribe.cs" />
+    <Compile Include="RabbitMQ\MessageEventArgs.cs" />
+    <Compile Include="RabbitMQ\Configuration.cs" />
     <Compile Include="EventModels\Process.cs" />
-    <Compile Include="Retry\IRetry.cs" />
-    <Compile Include="Retry\IRetryPolicy.cs" />
-    <Compile Include="ObjectSerialize.cs" />
+    <Compile Include="IRetry.cs" />
+    <Compile Include="IRetryPolicy.cs" />
+    <Compile Include="Serialization\ObjectSerialize.cs" />
     <Compile Include="EventModels\EventActionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Retry\Retry.cs" />
-    <Compile Include="Retry\RetryPolicy.cs" />
+    <Compile Include="RabbitMQ\Retry.cs" />
+    <Compile Include="RetryPolicy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
