--- a/EventBus/EventBus.csproj
+++ b/EventBus/EventBus.csproj
@@ -75,11 +75,11 @@
     <Compile Include="ISubscribe.cs" />
     <Compile Include="RabbitMQ\MessageEventArgs.cs" />
     <Compile Include="RabbitMQ\Configuration.cs" />
-    <Compile Include="EventModels\Process.cs" />
+    <Compile Include="EventModel.cs" />
     <Compile Include="IRetry.cs" />
     <Compile Include="IRetryPolicy.cs" />
     <Compile Include="Serialization\ObjectSerialize.cs" />
-    <Compile Include="EventModels\EventActionType.cs" />
+    <Compile Include="EventActionType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RabbitMQ\Retry.cs" />
     <Compile Include="RetryPolicy.cs" />
